--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: 2as Note's                          # the main title
+title: 2As Note's                          # the main title
 
 tagline: Sys Admin & Cyber Sec   # it will display as the sub-title
 
