--- a/_config.yml
+++ b/_config.yml
@@ -35,14 +35,14 @@ url: 'https://dos4s.github.io'
 github:
   username: dos4s             # change to your github username
 
-twitter:
-  username: twitter_username            # change to your twitter username
+#twitter:
+ # username: twitter_username            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: dos4s
-  email: example@doamin.com             # change to your email address
+ # email: example@doamin.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
     #- https://twitter.com/username      # change to your twitter homepage
